2009-03-21  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/get_gid.c, libmisc/get_uid.c, libmisc/Makefile.am,
	lib/get_gid.c, lib/get_uid.c, lib/Makefile.am: get_uid.c and
	get_gid.c moved from libmisc/ to lib/.

2009-03-21  Nicolas François  <nicolas.francois@centraliens.net>

	* src/grpck.c (check_members): When a member is removed, do not
	increase the index.
	* src/grpck.c: Fix typo in messages and comments.

2009-03-21  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Call fsync before closing the backup file. This
	ensures that the backup file is flushed to the storage medium.
	* src/useradd.c: Likewise for the default file, faillog, lastlog,
	and mail spool.
	* src/usermod.c: Likewise for the faillog and lastlog file.
	* src/vipw.c: Likewise for the backup file.
	* libmisc/sulog.c: Likewise for the su log.

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmod.c: Embed gshadow related cleanup in #ifdef
	SHADOWGRP.

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: get_number() replaced by getlong().
	* src/usermod.c: When the user is renamed, make sure we do not
	override an user with the same name (in passwd or shadow).

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: log_gpasswd_success_gshadow is in the cleanup
	stack only when the shadow group file is present.

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/userdel.c: Make sure the user exists in the shadow
	database before calling spw_remove().
	* NEWS, src/userdel.c: When the user's group is removed, make sure
	the group is in the gshadow database before calling sgr_remove().
	* src/userdel.c: Improve warning's wording.

2009-03-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/cleanup.c: Fix del_cleanup. The arguments were not
	desynchronized with the cleanup functions.